--- a/extentreports-cucumberjson-report/src/test/resources/extent.properties
+++ b/extentreports-cucumberjson-report/src/test/resources/extent.properties
@@ -1,3 +1,6 @@
 extent.reporter.html.config=src/test/resources/extent-config.xml
 extent.reporter.spark.config=src/test/resources/extent-config.xml
 extent.reporter.logger.config=src/test/resources/extent-config.xml
+
+basefolder.name=extent reports
+basefolder.datetimepattern=d-MMM-YY HH-mm-ss
