--- a/extentreports-cucumberjson-report/pom.xml
+++ b/extentreports-cucumberjson-report/pom.xml
@@ -10,8 +10,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
-	
-		<cucumber.version>6.4.0</cucumber.version>
+
+		<cucumber.version>6.6.0</cucumber.version>
 	</properties>
 
 	<dependencies>
@@ -57,7 +57,7 @@
 			<plugin>
 				<groupId>tech.grasshopper</groupId>
 				<artifactId>extentreports-cucumberjson-plugin</artifactId>
-				<version>1.6.0</version>
+				<version>2.0.0</version>
 				<executions>
 					<execution>
 						<id>report</id>
@@ -71,6 +71,7 @@
 					<cucumberJsonReportDirectory>${project.build.directory}</cucumberJsonReportDirectory>
 					<extentPropertiesDirectory>${project.build.testResources[0].directory}</extentPropertiesDirectory>
 					<displayAllHooks>false</displayAllHooks>
+					<strictCucumber6Behavior>true</strictCucumber6Behavior>
 				</configuration>
 			</plugin>
 		</plugins>
