Updated to version 2.3.0

--- a/extentreports-cucumberjson-report/src/test/resources/extent.properties
+++ b/extentreports-cucumberjson-report/src/test/resources/extent.properties
@@ -1,8 +1,6 @@
 extent.reporter.spark.config=src/test/resources/extent-config.xml
 
-extent.reporter.json.start=true
-extent.reporter.pdf.start=true
 
 #Use below settings to create reports in date-time named folders
-basefolder.name=extent reports
-basefolder.datetimepattern=d-MMM-YY HH-mm-ss
+#basefolder.name=extent reports
+#basefolder.datetimepattern=d-MMM-YY HH-mm-ss
