--- a/extentreports-cucumberjson-report/pom.xml
+++ b/extentreports-cucumberjson-report/pom.xml
@@ -11,7 +11,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
 
-		<cucumber.version>6.6.0</cucumber.version>
+		<cucumber.version>6.8.0</cucumber.version>
 	</properties>
 
 	<dependencies>
@@ -43,6 +43,15 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>3.0.0-M4</version>
 				<executions>
@@ -57,7 +66,7 @@
 			<plugin>
 				<groupId>tech.grasshopper</groupId>
 				<artifactId>extentreports-cucumberjson-plugin</artifactId>
-				<version>2.0.0</version>
+				<version>2.3.0</version>
 				<executions>
 					<execution>
 						<id>report</id>
