--- a/extentreports-cucumberjson-report/src/test/resources/pdf-config.yaml
+++ b/extentreports-cucumberjson-report/src/test/resources/pdf-config.yaml
@@ -10,9 +10,9 @@ summaryConfig:
    dataBackgroundColor: 4F0CC8
    titleColor: FF0000
    dateColor: 969696
-   startTimeColor: 000000
-   endTimeColor: 000000
-   durationColor: 000000
+   #startTimeColor: 000000
+   #endTimeColor: 000000
+   #durationColor: 000000
    dial:
       featureRanges: 60 95
       scenarioRanges: 70 90
@@ -22,12 +22,12 @@ summaryConfig:
       goodColor: 32ecab
    
 featureConfig:
-   itemcount: 10
+   #itemcount: 10
    totalColor: FF0000
    durationColor: FF0000
    
 scenarioConfig:
-   itemcount: 12
+   #itemcount: 12
    totalColor: FF0000
    durationColor: FF0000
    
@@ -59,5 +59,5 @@ detailedStepHookConfig:
    durationColor: FF0000
    errorMsgColor: 000000
    logMsgColor: 000000
-   mediaMsgColor: FF0000
+   #mediaMsgColor: FF0000
    
