--- a/extentreports-cucumberjson-report/pom.xml
+++ b/extentreports-cucumberjson-report/pom.xml
@@ -4,10 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>tech.grasshopper</groupId>
 	<artifactId>extentreports-cucumberjson-report</artifactId>
-	<version>1.0.0</version>
+	<version>2.8.0</version>
 
 	<properties>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<project.reporting.outputEncoding>UTF-8
+		</project.reporting.outputEncoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
 
@@ -66,7 +67,7 @@
 			<plugin>
 				<groupId>tech.grasshopper</groupId>
 				<artifactId>extentreports-cucumberjson-plugin</artifactId>
-				<version>2.7.1</version>
+				<version>2.8.0</version>
 				<executions>
 					<execution>
 						<id>report</id>
@@ -77,9 +78,11 @@
 					</execution>
 				</executions>
 				<configuration>
-					<cucumberJsonReportDirectory>${project.build.directory}</cucumberJsonReportDirectory>
-					<extentPropertiesDirectory>${project.build.testResources[0].directory}</extentPropertiesDirectory>
-					<displayAllHooks>false</displayAllHooks>
+					<cucumberJsonReportDirectory>${project.build.directory}
+					</cucumberJsonReportDirectory>
+					<extentPropertiesDirectory>${project.build.testResources[0].directory}
+					</extentPropertiesDirectory>
+					<displayAllHooks>true</displayAllHooks>
 					<strictCucumber6Behavior>true</strictCucumber6Behavior>
 				</configuration>
 			</plugin>
