--- a/extentreports-cucumberjson-report/src/test/resources/extent.properties
+++ b/extentreports-cucumberjson-report/src/test/resources/extent.properties
@@ -1,6 +1,6 @@
-extent.reporter.spark.config=src/test/resources/extent-config.xml
-
+extent.reporter.spark.config=src/test/resources/spark-config.xml
+extent.reporter.html.config=src/test/resources/html-config.xml
 
 #Use below settings to create reports in date-time named folders
-#basefolder.name=extent reports
-#basefolder.datetimepattern=d-MMM-YY HH-mm-ss
+basefolder.name= reports
+basefolder.datetimepattern=d-MMM-YY HH-mm-ss
