--- a/extentreports-cucumberjson-report/src/test/resources/pdf-config1.yaml
+++ b/extentreports-cucumberjson-report/src/test/resources/pdf-config1.yaml
@@ -5,6 +5,7 @@ displayFeature: true
 displayScenario: true
 displayDetailed: true
 displayAttached: true
+displayExpanded: false
 
 dashboardConfig:
    title: Cucumber PDF Report
