--- a/extentreports-cucumberjson-report/src/test/resources/extent.properties
+++ b/extentreports-cucumberjson-report/src/test/resources/extent.properties
@@ -4,3 +4,13 @@ extent.reporter.html.config=src/test/resources/html-config.xml
 #Use below settings to create reports in date-time named folders
 basefolder.name= reports
 basefolder.datetimepattern=d-MMM-YY HH-mm-ss
+
+#System information
+systeminfo.os=Windows
+systeminfo.version=8.1
+
+#Status filter
+#extent.reporter.statusfilter=fail
+
+#Spark view order
+extent.reporter.spark.vieworder=dashboard,test,exception,category,device,author
